@@ -12,6 +12,8 @@ lazy val testServerPort = settingKey[Int]("Port to run the http test server on (
 lazy val startTestServer = taskKey[Unit]("Start a http server used by tests (used by JS tests)")
 lazy val is2_11 = settingKey[Boolean]("Is the scala version 2.11.")
 lazy val is2_11_or_2_12 = settingKey[Boolean]("Is the scala version 2.11 or 2.12.")
+lazy val is2_13 = settingKey[Boolean]("Is the scala version 2.13.")
+lazy val javaVersion = settingKey[VersionNumber]("Java version")
 
 val silencerVersion = "1.4.4"
 
@@ -39,6 +41,8 @@ val commonSettings = commonSmlBuildSettings ++ ossPublishSettings ++ Seq(
   ),
   is2_11 := scalaVersion.value.startsWith("2.11."),
   is2_11_or_2_12 := scalaVersion.value.startsWith("2.11.") || scalaVersion.value.startsWith("2.12."),
+  is2_13 := scalaVersion.value.startsWith("2.13."),
+  javaVersion := VersionNumber(sys.props("java.specification.version")),
   libraryDependencies ++= Seq(
     compilerPlugin("com.github.ghik" % "silencer-plugin" % silencerVersion cross CrossVersion.full),
     "com.github.ghik" % "silencer-lib" % silencerVersion % Provided cross CrossVersion.full
@@ -49,7 +53,7 @@ val commonSettings = commonSmlBuildSettings ++ ossPublishSettings ++ Seq(
 // even if a project is 2.11-only, we fake that it's also 2.12/2.13-compatible
 val only2_11settings = Seq(
   publishArtifact := is2_11.value,
-  skip := !is2_11.value,
+  skip := !is2_11.value && !is2_13.value,
   skip in publish := !is2_11.value,
   libraryDependencies := (if (is2_11.value) libraryDependencies.value else Nil)
 )
@@ -61,12 +65,20 @@ val only2_11_and_2_12_settings = Seq(
   libraryDependencies := (if (is2_11_or_2_12.value) libraryDependencies.value else Nil)
 )
 
+val only2_13andJava11 = Seq(
+  publishArtifact := (is2_13.value && VersionNumber("11") == javaVersion.value),
+  skip := (is2_11_or_2_12.value || VersionNumber("11") != javaVersion.value),
+  skip in publish := (is2_11_or_2_12.value || VersionNumber("11") != javaVersion.value)
+)
+
 val commonJvmJsSettings = commonSettings ++ Seq(
   scalaVersion := scala2_11,
   crossScalaVersions := Seq(scalaVersion.value, scala2_12, scala2_13)
 )
 
-val commonJvmSettings = commonJvmJsSettings
+val commonJvmSettings = commonJvmJsSettings ++ Seq(
+  scalacOptions ++= Seq("-target:jvm-1.8")
+)
 
 val commonJsSettings = commonJvmJsSettings ++ Seq(
   // slow down for CI
@@ -196,7 +208,8 @@ lazy val rootJVM = project
     sprayJson,
     playJsonJVM,
     braveBackend,
-    prometheusBackend
+    prometheusBackend,
+    httpClientBackend
   )
 
 lazy val rootJS = project
@@ -555,3 +568,13 @@ lazy val prometheusBackend: Project = (project in file("metrics/prometheus-backe
     )
   )
   .dependsOn(coreJVM)
+
+//-- httpclient-java11
+lazy val httpClientBackend: Project = (project in file("httpclient-backend"))
+  .settings(commonJvmSettings: _*)
+  .settings(
+    name := "httpclient-backend",
+    scalacOptions ++= Seq("-J--add-modules", "-Jjava.net.http", "-target:jvm-11")
+  )
+  .settings(only2_13andJava11)
+  .dependsOn(catsJVM, coreJVM % compileAndTest)
